@@ -1,0 +1,2 @@
+kick viper
+quit
